<resources>
    <string name="app_name">TN Shinglas</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="authorization">Authorization</string>
    <string name="enter">Enter</string>
    <string name="tn_title">TechnoNicol</string>
    <string name="err_barcode_format">Invalid barcode format</string>
    <string name="https_service_connected">HTTPS: Service connected</string>
    <string name="err_emty_login_or_password">Username or password not filled!</string>
    <string name="err_an_error_has_occured">An error has occurred</string>
    <string name="err_an_unknown_error_has_occured">An unknown error has occurred</string>
    <string name="text_code">Code</string>
    <string name="err_barcode_format_description">The barcode must be generated at https://barcode.tn.ru/Barcode/</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_header">Basic settings</string>
    <string name="service_url_title">Service URL</string>
    <string name="response_scanning_title">Scan response</string>
    <string name="additional_settings_title">Additional settings</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_sound">Sound</string>
    <string name="text_nothing">Nothing</string>
    <string name="text_vibration">Vibration</string>
    <string name="service_user_name_title">1C username for http service</string>
    <string name="service_user_password_title">1C user password for http service</string>
    <string name="text_check_basic_settings">Check basic settings</string>
    <string name="err_http_service_url_not_set">1C HTTP service URL not set</string>
    <string name="nomenclature_title">Nomenclature</string>
    <string name="measure_of_unit_title">UOM</string>
    <string name="division_title">Division</string>
    <string name="workwear_ordinary_title">Workwear (regular)</string>
    <string name="workwear_disposable_title">Workwear (disposable)</string>
    <string name="warehouse_title">Warehouse</string>
    <string name="purpose_of_use_title">Purpose of use</string>
    <string name="physical_person_title">Physical person</string>
    <string name="employee_title">Employee</string>
    <string name="owner_title">Owner:</string>
    <string name="documents_settings_title">Creating documents</string>
    <string name="warehouse_list_description">Select a warehouse</string>
    <string name="header_nomenclature">Nomenclature</string>
    <string name="header_quantity">Qty</string>
    <string name="header_unit_of_measurement">UOM</string>
    <string name="header_cell">Cell from</string>
    <string name="header_cell_receiver">Cell receiver</string>
    <string name="header_virtual_cell">Virtual cell</string>
    <string name="retry_loading">Retry</string>
    <string name="error_loading">An error occurred when accessing the server. Repeat later.</string>
    <string name="settings_for_substituting_text">Settings for substituting values into documents</string>
    <string name="cancel_text">Cancel</string>
    <string name="empty_login_error_text">Login is not specified!</string>
    <string name="empty_password_error_text">Password is not specified!</string>
    <string name="request_to_server">Request to the server...</string>
    <string name="question_exit_text">Do you really want to get out?</string>
    <string name="question_exit_session_text">Are you sure you want to end the session?</string>
    <string name="question_exit_session_title">End session</string>
    <string name="ok_text">Ok</string>
    <string name="quantity_full_text">Quantity</string>
    <string name="apply_text">Apply</string>
    <string name="complete_and_send_text">Complete and send to 1C</string>
    <string name="add_more_text">Add\nmore</string>
    <string name="quality_text">Quality</string>
    <string name="delete_text">Delete</string>
    <string name="edit_record_text">Edit</string>
    <string name="document_init_dialog_title">Requisites</string>
    <string name="info_table_scan_start_text">To get started,\nscan the cell or item</string>
    <string name="info_table_scan_continue_text">To continue, scan the cell or item.</string>
    <string name="division_list_description">Select division</string>
    <string name="not_chosen_text">[Not chosen]</string>
    <string name="incoming_number_text">In. number</string>
    <string name="incoming_date_text">In. date</string>
    <string name="counterparty_or_inn_text">Counterparty/TIN</string>
    <string name="nothing_found_text">Nothing was found :(</string>
    <string name="specify_name_or_inn_text">Please specify the name or TIN</string>
    <string name="find_text">Find</string>
    <string name="clear_text">Clear</string>
    <string name="save_text">Save</string>
    <string name="nomenclature_not_found_text">The nomenclature was not found</string>
    <string name="cell_not_found_text">The cell was not found</string>
    <string name="check_label_scan_again_text">Check the label and scan the barcode again</string>
    <string name="check_nomenclature_and_measure_of_unit_scan_again_text">Check the label and scan the barcode again</string>
    <string name="document_details_text">Document details</string>
    <string name="field_must_be_filled_text">*the field must be filled in</string>
    <string name="select_document_text">Select document</string>
    <string name="document_1c_text">Document 1C</string>
    <string name="back_text">&lt; Back</string>
    <string name="select_document">Select Document</string>
    <string name="select_text">Select</string>
    <string name="show_selected_text">Show  selected</string>
    <string name="choose_another_text">Choose another</string>
    <string name="changing_an_entry_text">Changing an entry</string>
    <string name="nomenclature_substitution_text">In record editing mode, nomenclature substitution is not allowed.</string>
    <string name="not_correct_cell">Cell in document does not match scanned or current</string>
    <string name="cell_text">Cell</string>
    <string name="total_text">Total</string>
    <string name="selected_and_by_document_text">selected / in document</string>
    <string name="not_scanned_yet">[Not scanned yet]</string>
    <string name="blank_cell">---</string>
    <string name="select_virtual_cell">Select virtual cell</string>
    <string name="barcode_text">Barcode</string>
    <string name="unique_number_id_text">Unique number within a company ID</string>
    <string name="date_of_manufacture">Date of manufacture (YYMMDD)</string>
    <string name="batch_number">Batch number</string>
    <string name="in_batch_number">In batch number</string>
    <string name="gs1_company_id">GS1 Company ID</string>
    <string name="serial_number">Serial number</string>
    <string name="expiry_date">Expiry Date (YYMMDD)</string>
    <string name="product_code">Product code</string>
    <string name="type_text">Type</string>
    <string name="length_text">Length</string>
    <string name="barcode_parsing_tn">TN barcode parsing</string>
    <string name="scan_tn_barcode_text">[Scan a TN barcode]</string>
    <string name="barcode_length_less_than_48_characters">Barcode length is less than 48 characters</string>
    <string name="clear">Clear</string>
    <string name="next">Next >></string>
    <string name="warehouse_receiver_title">Warehouse receiver</string>
    <string name="http_service_authorization_error">HTTP service authorization error. Check login/password for http service</string>
    <string name="application_will_now_be_restarted">You must restart the application for the changes to take effect.\nRestart now?</string>
    <string name="recreate_connection_text">You need to re-create the connection. Apply now?</string>
    <string name="other_nomenclature_text">Other nomenclature</string>
    <string name="scanned_another_nomenclature_text">Scanned another nomenclature. Replace current one?</string>
    <string name="to_cell_equal_from_cell">The To cell cannot be the same as the From cell.</string>
    <string name="stocks">Stocks</string>
    <string name="err_scan_ean13_barcode">Scan the EAN-13 barcode!</string>
    <string name="search_text">Search</string>
    <string name="code_text">Code</string>
    <string name="show_balances_by">Show balances by</string>
    <string name="enter_least_3_characters">Please enter at least 3 characters</string>
    <string name="failed_get_warehouse">Failed to get warehouse</string>
    <string name="gvzo_text">GVZO</string>
    <string name="gvzo_not_found">The GVZO was not found</string>
    <string name="by_gvzo_text">By GVZO</string>
    <string name="by_nomenclature_text">By nomenclature</string>
    <string name="no_data">[No data]</string>
    <string name="used_logistics">Used logistics</string>
    <string name="warehouse_uses_logistics">Warehouse uses logistics</string>
    <string name="warehouse_not_specified">Warehouse not specified</string>
    <string name="warehouse_is_not_set_open_settings">Warehouse is not set. \nOpen settings?</string>
    <string name="current_cell_text">Current cell</string>
    <string name="enter_part_of_employee_name">Please enter a part of the employee\'s full name</string>
    <string name="scan_the_cell">Scan the cell!</string>
    <string name="print_text">Print</string>
    <string name="print_barcode_text">Print barcode</string>
    <string name="ean13_text">EAN13</string>
    <string name="qr_text">QR</string>
    <string name="code128_text">CODE 128</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="printer_settings">Printer settings</string>
    <string name="applicaton_settings">Application settings</string>
    <string name="use_system_printer">Use system printer</string>
    <string name="use_android_print_service">Use Android Print Service</string>
    <string name="set_printer_settings_manually">Set Printer Settings Manually</string>
    <string name="manual_setting">Manual setting</string>
    <string name="tsc_family_printer">TSC Family Printer</string>
    <string name="printer_model">Printer model</string>
    <string name="another">Another</string>
    <string name="automatic_or_manual">Automatic/Manual</string>
    <string name="label_width_mm">Label width, mm</string>
    <string name="label_height_mm">Label height, mm</string>
    <string name="printing_in_process">Printing in process</string>
    <string name="value_text">Value</string>
    <string name="printer_ip_address">IP address</string>
    <string name="type_of_printer_is_not_supported_yet">This type of printer is not supported yet</string>
    <string name="document_is_closed_in_1C">The document is closed in 1C, sending data is impossible!</string>
    <string name="document_has_been_updated">The document has been updated</string>
    <string name="undefined_value">&lt;?&gt;</string>
    <string name="print_cell_barcode">Print cell barcode</string>
    <string name="print_item_barcode">Print item barcode</string>
    <string name="residue_control">Residue control</string>
    <string name="no_remaining_balance">No remaining balance</string>
</resources>