<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BarcodeParsingTN">

    <TextView
        android:id="@+id/headerBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/barcode_text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/barcodeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="center_horizontal"
        android:textColor="@color/red_400"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBarcode"
        tools:text="NNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNN" />
    <TextView
        android:id="@+id/errorDetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text=""
        android:textSize="12sp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/barcodeTextView"
        android:textColor="@color/black"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/detailGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="scrollDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorDetailText"
        tools:visibility="visible" />

    <ScrollView
        android:id="@+id/scrollDetail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorDetailText"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/detailLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barcodeTextView">

            <TextView
                android:id="@+id/uniqueNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/unique_number_id_text"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/uniqueNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:textColor="@color/light_blue_900"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:text="NNN" />

            <TextView
                android:id="@+id/dateOfManufacture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/date_of_manufacture"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/dateOfManufactureTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:textColor="@color/light_blue_900"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:text="NNNNNN" />

            <TextView
                android:id="@+id/batchNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/batch_number"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/batchNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:textColor="@color/light_blue_900"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:text="NNNNN" />

            <TextView
                android:id="@+id/inBatchNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/in_batch_number"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/inBatchNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:textColor="@color/light_blue_900"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:text="NNN" />

            <TextView
                android:id="@+id/gsOneId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/gs1_company_id"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/gsOneIdTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:textColor="@color/light_blue_900"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:text="NNNNN" />

            <TextView
                android:id="@+id/serialNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/serial_number"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/serialNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:textColor="@color/light_blue_900"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:text="NNNNNNNNNNNNNNNNNNNNNNNNNN" />

            <TextView
                android:id="@+id/expiryDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/expiry_date"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/expiryDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:textColor="@color/light_blue_900"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:text="NNNNNN" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/header_quantity"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:textColor="@color/light_blue_900"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:text="NNNNNNN" />

            <TextView
                android:id="@+id/measureOfUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/measure_of_unit_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/measureOfUnitTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:textColor="@color/light_blue_900"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:text="NNN" />

            <TextView
                android:id="@+id/productCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/product_code"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/productCodeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/light_blue_900"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:text="NNNNNN" />

            <Button
                android:id="@+id/backBarcodeParseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/back_text" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>