<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_header">

        <EditTextPreference
            android:dialogIcon="@drawable/ic_baseline_http_24"
            android:icon="@drawable/ic_baseline_http_24"
            app:key="serviceUrl"
            app:title="@string/service_url_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:dialogIcon="@drawable/ic_baseline_account_circle_24"
            android:icon="@drawable/ic_baseline_account_circle_24"
            app:key="serviceUserName"
            app:title="@string/service_user_name_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:dialogIcon="@drawable/ic_baseline_password_24"
            android:icon="@drawable/ic_baseline_password_24"
            app:key="serviceUserPassword"
            app:title="@string/service_user_password_title"
            app:useSimpleSummaryProvider="false" />

    </PreferenceCategory>
<!--    <PreferenceCategory app:title="@string/messages_header">-->

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--    </PreferenceCategory>-->
<!--    <PreferenceCategory app:title="@string/sync_header">-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

<!--    </PreferenceCategory>-->

    <!--    <PreferenceCategory app:title="@string/documents_settings_title">-->
    <!--        <ru.tn.shinglass.adapters.extendsPreferences.ExtendListPreference-->
    <!--            android:key="warehouse_list"-->
    <!--            android:summary="@string/warehouse_list_description"-->
    <!--            android:title="@string/warehouse_title" />-->
    <!--    </PreferenceCategory>-->

    <!--    <PreferenceCategory app:title="@string/additional_settings_title">-->

    <!--        <ListPreference-->
    <!--            android:dialogIcon="@drawable/ic_baseline_volume_mute_24"-->
    <!--            android:icon="@drawable/ic_baseline_volume_mute_24"-->
    <!--            app:defaultValue="nothing"-->
    <!--            app:entries="@array/response_when_scanning"-->
    <!--            app:entryValues="@array/response_when_scanning_values"-->
    <!--            app:key="response_when_scanning"-->
    <!--            app:title="@string/response_scanning_title"-->
    <!--            app:useSimpleSummaryProvider="true" />-->

    <!--        &lt;!&ndash;        <SwitchPreferenceCompat&ndash;&gt;-->
    <!--        &lt;!&ndash;            app:key="sync"&ndash;&gt;-->
    <!--        &lt;!&ndash;            app:title="@string/sync_title" />&ndash;&gt;-->

    <!--        &lt;!&ndash;        <SwitchPreferenceCompat&ndash;&gt;-->
    <!--        &lt;!&ndash;            app:dependency="sync"&ndash;&gt;-->
    <!--        &lt;!&ndash;            app:key="attachment"&ndash;&gt;-->
    <!--        &lt;!&ndash;            app:summaryOff="@string/attachment_summary_off"&ndash;&gt;-->
    <!--        &lt;!&ndash;            app:summaryOn="@string/attachment_summary_on"&ndash;&gt;-->
    <!--        &lt;!&ndash;            app:title="@string/attachment_title" />&ndash;&gt;-->

    <!--    </PreferenceCategory>-->

</PreferenceScreen>