<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/document_init_dialog_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/warehouseTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/warehouse_title"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_warehouse_24">

        <!--                <com.google.android.material.textfield.TextInputEditText-->
        <!--                    android:id="@+id/warehouseTextView"-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:imeOptions="actionDone"-->
        <!--                    android:inputType="text"-->
        <!--                    android:maxLines="1" />-->
        <AutoCompleteTextView
            android:id="@+id/warehouseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--            <TextView-->
    <!--                android:id="@+id/phisicalPersonTextView"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_margin="@dimen/margin4"-->
    <!--                android:autoLink="none"-->
    <!--                android:clickable="true"-->
    <!--                android:linksClickable="false"-->
    <!--                android:textSize="16sp"-->
    <!--                app:drawableRightCompat="@drawable/ic_baseline_manage_search_24"-->
    <!--                tools:text="Физическое лицо" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phisicalPersonTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/physical_person_title"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

        <AutoCompleteTextView
            android:id="@+id/phisicalPersonTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--            <TextView-->
    <!--                android:id="@+id/cellTxtView"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_margin="@dimen/margin4"-->
    <!--                android:fontFamily="monospace"-->
    <!--                android:inputType="textMultiLine"-->
    <!--                android:textAlignment="viewStart"-->
    <!--                android:textSize="16sp"-->
    <!--                android:textStyle="bold"-->
    <!--                tools:text="Ячейка" />-->

</LinearLayout>